--- a/events-styles.css
+++ b/events-styles.css
@@ -57,11 +57,163 @@ h1, h2 {
 
 /* Event Cards */
 
+.card {
+  margin-top: 2%;
+}
 .events-card img {
-  width: 100px;
-  height: 100px;
+  /* align-self: center; */
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  /* position: absolute; */
+  object-fit: cover;
 }
 
 .events-card {
   box-shadow: rgb(0 0 0 / 8%);
+  text-align: center;
+  padding-bottom: 5%;
 }
+
+.events-to-come {
+  color: black;
+  padding-top: 3%;
+  text-align: center;
+}
+
+.petitions {
+  color: black;
+  padding-top: 3%;
+  text-align: center;
+}
+
+/* Donate Section */
+
+.donate-section {
+  background-color: #9DC08B;
+}
+.donate-heading {
+  color: black;
+  padding-top: 20%;
+  text-align: center;
+}
+
+.donate-hook {
+  font-size: large;
+  font-weight: bold;
+  color:black;
+  padding-top: 15%;
+  text-align: center;
+}
+
+.donate-button {
+  margin: 5% 3% 5% 0;
+  text-align: center;
+}
+
+.donate-image {
+  border-radius: 100%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+/* Footer Section */
+
+#footer {
+  text-align: center;
+  line-height: 1.5rem;
+  padding: 7% 15%;
+}
+
+.social-icons {
+  font-size: 1rem;
+  margin-bottom: 1.5rem;
+  margin-right: 1rem;
+}
+
+/* * {
+  box-sizing: border-box;
+}
+
+.events-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  background: #efecff;
+  background-size: 16px 16px;
+  font-family: "Euclid Circular A", "Poppins";
+} 
+
+
+.events-card {
+  display: flex;
+  align-items: center;
+  width: 75vw;
+  max-width: 650px;
+  padding: 50px 30px 50px 20px;
+  background: #ffffff;
+  border-radius: 24px;
+}
+
+.events-card img {
+  max-width: 280px;
+  width: 28vw;
+  height: 300px;
+  object-fit: cover;
+  margin-left: -60px;
+  margin-right: 30px;
+  border-radius: inherit;
+  box-shadow: 0 60px 40px rgb(0 0 0 / 8%);
+}
+
+.events-card h3 {
+  font-size: 22px;
+  margin-right: 30px;
+}
+
+.events-card h4 {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(0 0 0 / 90%);
+}
+
+.events-card p {
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(0 0 0 / 70%);
+  margin-bottom: 24px;
+}
+
+.events-card button {
+  border: 0;
+  background: linear-gradient(90deg, #5448de, #5448de);
+  color: #f8f8f8;
+  font-family: inherit;
+  padding: 16px 26px;
+  font-size: 16px;
+  border-radius: 40px;
+}
+
+@media (max-width: 740px) {
+  .events-card {
+    margin: 0 40px;
+    padding-left: 50px;
+    padding-right: 50px;
+    width: 100%;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .events-card h2 {
+    margin-right: 0;
+    font-size: 26px;
+  }
+
+  .events-card img {
+    margin: -100px 0 30px 0;
+    width: 100%;
+    max-width: 1000px;
+  }
+} */
