--- a/events-styles.css
+++ b/events-styles.css
@@ -28,7 +28,7 @@ body {
 
 
 .titles {
-  background-image: url('images/forest.jpeg');
+  background-image: url('images/mountain-sunset.jpeg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -55,20 +55,20 @@ h1, h2 {
   text-align: center;
 }
 
+.events-to-come {
+  color: black;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  text-align: center;
+}
+
+
 /* Event Cards */
 
 .card {
-  margin-top: 2%;
+  margin: 5% 2% 3 2%;
 }
-.events-card img {
-  /* align-self: center; */
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  /* position: absolute; */
-  object-fit: cover;
-}
+
 
 .events-card {
   box-shadow: rgb(0 0 0 / 8%);
@@ -76,22 +76,153 @@ h1, h2 {
   padding-bottom: 5%;
 }
 
-.events-to-come {
+.events-card img {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  position: absolute;
+  object-fit: cover;
+}
+
+.card-title {
+  font-weight: 900;
+  color: red;
+  position: absolute;
+  z-index: 2;
+}
+
+.events-card img:hover {
+  width: 15rem;
+  height: 15rem;
+  text-align: center;
+}
+.card-title:hover {
+  z-index: 0;
+} 
+
+
+/* PETITIONS */
+
+ /* .petitons-card {
+  padding-bottom: 3%;
+  margin-bottom: 3%;
+} */
+
+.petitions-title {
   color: black;
   padding-top: 3%;
+  padding-bottom: 3%;
   text-align: center;
 }
 
-.petitions {
-  color: black;
-  padding-top: 3%;
-  text-align: center;
+.petition-wrapper {
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
 }
+
+
+.wrapper {
+  display: flex;
+  width: 90%;
+  justify-content: space-around;
+}
+
+.petition-card {
+  width: 70%;
+  height: 360px;
+  background: #fff;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+  transition: 0.5s ease-in-out;
+}
+
+.petition-card:hover {
+  transform: translateY(20px);
+}
+
+.petition-card:before{
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 176, 155, 0.5), rgba(150, 201, 61,1));
+  z-index: 2;
+  transition: 0.5s all;
+  opacity: 0;
+}
+
+.petition-card:hover:before {
+  opacity: 1;
+}
+
+.petition-card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.petition-card-infos {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.5s all;
+}
+
+.petition-card-infos:hover {
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+.petition-card-infos h1 {
+  margin: 0;
+}
+
+.petition-card-infos p {
+  letter-spacing: 1px;
+  font-size: 15px;
+  margin-top:8px;
+  margin-bottom: 20px;
+}
+
+.petition-btn {
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  background: #fff;
+  color: #000;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.4 ease-in-out;
+}
+
+.petition-btn:hover {
+  box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
+}
+
 
 /* Donate Section */
 
 .donate-section {
   background-color: #9DC08B;
+  margin-top: 3%;
 }
 .donate-heading {
   color: black;
