--- a/events-styles.css
+++ b/events-styles.css
@@ -13,7 +13,6 @@ body {
 }
 
 .navbar-toggler{
-  /* margin-left: 90%; */
   margin-bottom: 2rem;
 }
 
@@ -65,42 +64,74 @@ h1, h2 {
 
 /* Event Cards */
 
-.card {
-  margin: 5% 2% 3 2%;
+.events {
+  padding: 2rem;
 }
 
 
-.events-card {
-  box-shadow: rgb(0 0 0 / 8%);
-  text-align: center;
-  padding-bottom: 5%;
+ul {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(200px, 1fr) );
+  grid-gap: 1rem;
+  list-style: none;
 }
 
-.events-card img {
+.events li {
+  border: 1px solid #E2E2E2;
+  border-radius: .5rem;
+}
+
+figure {
+  max-height: 220px;
+  overflow: hidden;
+  border-top-left-radius: .5rem;
+  border-top-right-radius: .5rem;
+  position: relative;
+}
+
+figure img {
   width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+}
+
+figure figcaption {
   position: absolute;
-  object-fit: cover;
+  bottom: 0;
+  background-color: rgba(0,0,0,.7);
+  width: 100%;
 }
 
-.card-title {
-  font-weight: 900;
-  color: red;
-  position: absolute;
-  z-index: 2;
+figure figcaption h3 {
+  color: white;
+  padding: .75rem;
+  font-size: 1.25rem;
 }
 
-/* .events-card img:hover {
-  width: 15rem;
-  height: 15rem;
-  text-align: center;
+.events li h6 {
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 1rem .75rem;
 }
-.card-title:hover {
-  z-index: 0;
-}  */
 
+.events li p {
+  font-size: 1rem;
+  line-height: 1.5;
+  padding: 1rem .75rem;
+  color: #666666;
+}
+
+
+.events-btn {
+    display: flex;
+    justify-content: center;
+    padding: .5rem 1rem;
+    margin: .5rem;
+}
+
+@media screen and (max-width:320px) {
+  .events ul {
+    padding-left: 0%;
+  }
+}
 
 /* PETITIONS */
 
@@ -115,18 +146,16 @@ h1, h2 {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   margin-top: 5rem;
   margin-bottom: 5rem;
-
 }
 
-
 .wrapper {
-  display: flex;
-  width: 90%;
+  /* display: flex; */
+  width: 100%;
   justify-content: space-around;
 }
 
@@ -138,30 +167,7 @@ h1, h2 {
   display: flex;
   align-items: flex-end;
   box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
-  /* transition: 0.5s ease-in-out; */
 }
-
-/* .petition-card:hover {
-  transform: translateY(20px);
-} */
-
-/* .petition-card:before{
-  content:"";
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(to bottom, rgba(0, 176, 155, 0.5), rgba(150, 201, 61,1));
-  z-index: 2;
-  transition: 0.5s all;
-  opacity: 0;
-}
-
-.petition-card:hover:before {
-  opacity: 1;
-} */
 
 .petition-card-image {
   width: 100%;
@@ -177,15 +183,7 @@ h1, h2 {
   z-index: 3;
   color: #fff;
   max-width: 100%;
-  /* opacity: 0; */
-  /* transform: translateY(30px); */
-  /* transition: 0.5s all; */
 }
-
-/* .petition-card-infos:hover {
-  opacity: 1;
-  transform: translateY(0px);
-} */
 
 .petition-card-infos h2 {
   margin: 0;
@@ -200,11 +198,12 @@ h1, h2 {
   padding-left: 0.5rem;
 }
 
+
 @media screen and (max-width: 320px){
 
 }
   
-
+/* Petition cards effect for desktop and other screen that allow hover effect. */
 @media (hover) {
   .petition-card{
     transition: 0.5s ease-in-out;
@@ -261,15 +260,9 @@ h1, h2 {
   font-weight: bold;
   cursor: pointer;
   margin-left: 0.5rem;
-  /* transition: 0.4 ease-in-out; */
   position: relative;
 }
 
-
-
-/* .petition-btn:hover {
-  box-shadow: 0px 7px 10px rgba(0,0,0,0.5);
-} */
 
 
 /* Donate Section */
@@ -278,10 +271,16 @@ h1, h2 {
   background-color: #9DC08B;
   margin-top: 3%;
 }
+
+.donate-content{
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
 .donate-heading {
   color: black;
   padding-top: 20%;
-  text-align: center;
 }
 
 .donate-hook {
@@ -289,18 +288,17 @@ h1, h2 {
   font-weight: bold;
   color:black;
   padding-top: 15%;
-  text-align: center;
 }
 
 .donate-button {
   margin: 5% 3% 5% 0;
-  text-align: center;
 }
 
 .donate-image {
   border-radius: 100%;
   margin-top: 5%;
   margin-bottom: 5%;
+  width: 100%;
 }
 
 /* Footer Section */
@@ -316,89 +314,3 @@ h1, h2 {
   margin-bottom: 1.5rem;
   margin-right: 1rem;
 }
-
-/* * {
-  box-sizing: border-box;
-}
-
-.events-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  background: #efecff;
-  background-size: 16px 16px;
-  font-family: "Euclid Circular A", "Poppins";
-} 
-
-
-.events-card {
-  display: flex;
-  align-items: center;
-  width: 75vw;
-  max-width: 650px;
-  padding: 50px 30px 50px 20px;
-  background: #ffffff;
-  border-radius: 24px;
-}
-
-.events-card img {
-  max-width: 280px;
-  width: 28vw;
-  height: 300px;
-  object-fit: cover;
-  margin-left: -60px;
-  margin-right: 30px;
-  border-radius: inherit;
-  box-shadow: 0 60px 40px rgb(0 0 0 / 8%);
-}
-
-.events-card h3 {
-  font-size: 22px;
-  margin-right: 30px;
-}
-
-.events-card h4 {
-  font-size: 16px;
-  font-weight: 400;
-  color: rgb(0 0 0 / 90%);
-}
-
-.events-card p {
-  font-size: 14px;
-  font-weight: 400;
-  color: rgb(0 0 0 / 70%);
-  margin-bottom: 24px;
-}
-
-.events-card button {
-  border: 0;
-  background: linear-gradient(90deg, #5448de, #5448de);
-  color: #f8f8f8;
-  font-family: inherit;
-  padding: 16px 26px;
-  font-size: 16px;
-  border-radius: 40px;
-}
-
-@media (max-width: 740px) {
-  .events-card {
-    margin: 0 40px;
-    padding-left: 50px;
-    padding-right: 50px;
-    width: 100%;
-    text-align: center;
-    flex-direction: column;
-  }
-
-  .events-card h2 {
-    margin-right: 0;
-    font-size: 26px;
-  }
-
-  .events-card img {
-    margin: -100px 0 30px 0;
-    width: 100%;
-    max-width: 1000px;
-  }
-} */
